--- a/source/css/series.scss
+++ b/source/css/series.scss
@@ -22,36 +22,53 @@ h1 {
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
 $global-stats-width: 300px;
+$two-column-min-width: 770px;
 
 .container {
 	max-width: 800px;
 	margin: 0 auto;
+	padding: 16px;
 	position: relative;
+
+	@media (min-width: $two-column-min-width) {
+		padding: 0;
+	}
 }
 
 .global-stats {
-	position: fixed;
-	top: 0;
-	padding-top: 20vh;
+	padding-bottom: 44px;
 	font-size: 32px;
 	color: rgba(#fff, 0.666);
 	line-height: 1.32;
+
+	@media (min-width: $two-column-min-width) {
+		position: fixed;
+		top: 0;
+		padding-top: 20vh;
+	}
 }
 
 .series-list {
-	$vertical-padding: 2vh;
-	padding: $vertical-padding 0 $vertical-padding $global-stats-width;
+
+	@media (min-width: $two-column-min-width) {
+		$vertical-padding: 5vh;
+		padding: $vertical-padding 0 $vertical-padding $global-stats-width;
+	}
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
 .series {
-	// outline: 2px dashed #f0a;
-	padding: 16px 16px 32px;
+	padding-bottom: 32px;
 
 	+ .series {
 		border-top: 3px solid rgba(#000, 0.2);
 		padding-top: 32px;
+	}
+
+	@media (min-width: $two-column-min-width) {
+		padding-left: 16px;
+		padding-right: 16px;
 	}
 }
 
@@ -65,7 +82,6 @@ $global-stats-width: 300px;
 	font-size: 16px;
 	color: rgba(#fff, 0.75);
 }
-
 
 .episode-grid {
 	display: table;
@@ -97,19 +113,8 @@ $global-stats-width: 300px;
 	&.watched {
 		background: #4caf50;
 	}
-}
 
-.episode-grid .season .episode:hover {
-	border: 1px solid #000;
-}
-
-
-
-// material elements
-.card {
-	margin-bottom: 8px;
-	border-radius: 2px;
-	background-color: #fff;
-	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-	position: relative;
+	&:hover {
+		border: 1px solid #000;
+	}
 }
